# gridReader

./: .gitignore  README.md  frameseq.py  justfile  pyproject.toml
.github/workflows/: python_package.yml
src/gridreader/: __init__.py  __main__.py  log.py  parity_check.py  parse.py  tel_parse.py
src/gridreader/format/: __init__.py  __main__.py  feat_testB2412.py  hk_testB2412.py  tel_testB2412.py
src/gridreader/format/ksy/: feat_testB2412.ksy  hk_testB2412.ksy  tel_testB2412.ksy  wave_testB2412.ksy
tests/: test_B2412.py
